--- a/Sources/Grade.html
+++ b/Sources/Grade.html
@@ -41,7 +41,7 @@
     Maths<br><input type="number" id="mark2" value="" placeholder="Enter Maths Marks"></input><br><br>
     Science<br><input type="number" id="mark3" value="" placeholder="Enter Science Marks"></input><br><br>
     Social Science<br><input type="number" id="mark4" value="" placeholder="Enter Social Marks"></input><br><br>
-    <button id="but" onclick="validate()">Submit</button><br><br>   
+    <button id="button" onclick="validate()">Submit</button><br><br>   
     <button onclick="display_array()">Display</button>    
 </div>
 <div id="Result"></div>
