--- a/Sources/Grade.html
+++ b/Sources/Grade.html
@@ -8,9 +8,9 @@
         <body>
                 <h1>Bright Angels School---Students Aggregate Report Card</h1>
                 <div class="Entities">
-                        Student-Id<br><input type="number" id="stud-id" value="" placeholder="Enter Student-Id"></input><br><br>
+                        Student-Id<br><input type="number" id="StudentId" value="" placeholder="Enter Student-Id"></input><br><br>
                         Grade-&nbsp
-                        <select name="Grade" id="grade"  onchange='assign()' value="0">
+                        <select name="Grade" id="Grade"  onchange='assign()' value="0">
                                 <option value="0">Select</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
@@ -28,7 +28,7 @@
                         &nbsp &nbsp &nbsp &nbsp
                         
                         Division-&nbsp
-                        <select name="division" id="div">
+                        <select name="division" id="Div">
                                 <option value="0">Select</option>
                                 <option value="A">A</option>
                                 <option value="B">B</option>
@@ -36,12 +36,12 @@
                                 <option value="D">D</option>
                         </select><br><br>
 
-                        English<br><input type="number" id="mark1" value="" placeholder="Enter English Marks"></input><br><br>
-                        Maths<br><input type="number" id="mark2" value="" placeholder="Enter Maths Marks"></input><br><br>
-                        Science<br><input type="number" id="mark3" value="" placeholder="Enter Science Marks"></input><br><br>
-                        Social Science<br><input type="number" id="mark4" value="" placeholder="Enter Social Marks"></input><br><br>
-                        <button id="button1" onclick="validate()">Submit</button><br><br>   
-                        <button id="button1" onclick="display_array()">Display</button>    
+                        English<br><input type="number" id="Mark1" value="" placeholder="Enter English Marks"></input><br><br>
+                        Maths<br><input type="number" id="Mark2" value="" placeholder="Enter Maths Marks"></input><br><br>
+                        Science<br><input type="number" id="Mark3" value="" placeholder="Enter Science Marks"></input><br><br>
+                        Social Science<br><input type="number" id="Mark4" value="" placeholder="Enter Social Marks"></input><br><br>
+                        <button id="Button1" onclick="Validate()">Submit</button><br><br>   
+                        <button id="Button1" onclick="DisplayArray()">Display</button>    
                 </div>
         <div id="Result"></div>
         <script src="../Javascript/Grade.js"></script>
